# temp_20150901

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md  connected_network.cpp  digit_pattern_recognition_improved.cpp  digit_recognition.cpp  digit_recognition_fixed.cpp  logic_gates.cpp  multilayer_network.cpp  simple_network.cpp  xor_example.cpp
scripts/: build.sh  run.sh
src/: main.cpp
src/network/: layer.cpp  layer.h  network.cpp  network.h
src/neuron/: neuron.cpp  neuron.h
src/synapse/: synapse.cpp  synapse.h
tests/: CMakeLists.txt  test_network.cpp  test_neuron.cpp
